# infer-onnx-lib

./: .gitignore  README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: infer_on.hpp  utils.hpp
python/: README.md
python/common/: __init__.py
python/env/: requirements.txt
python/env/docker/: Dockerfile  build.sh  requirements.sh  run.sh
